--- a/mystyle.css
+++ b/mystyle.css
@@ -1,6 +1,6 @@
 @import url(https://fonts.googleapis.com/css2?family=K2D:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap);
 
-body, h2, p {
+body, h2, p  {
     font-family: "K2D", system-ui;
     margin: 0;
     padding: 0;
@@ -192,3 +192,21 @@ header {
             width: 500px;  
             height: 500px;
         }
+
+nav ul li a 
+{
+    text-decoration: none;
+    font-size: 1.1em;
+    transition: color 0.3s ease;
+    color: rgb(39, 35, 95);
+}
+        
+nav ul li a:hover {
+    color: #333;
+}
+
+nav ul li {
+    display: inline-block;
+    margin: 0 40px;
+    font-size: 20px;
+}
