--- a/mystyle.css
+++ b/mystyle.css
@@ -196,17 +196,18 @@ header {
 nav ul li a 
 {
     text-decoration: none;
-    font-size: 1.1em;
     transition: color 0.3s ease;
     color: rgb(39, 35, 95);
 }
         
-nav ul li a:hover {
-    color: #333;
+nav ul li a:hover 
+{
+    color: #5c7ef0;
 }
 
-nav ul li {
+nav ul li 
+{
     display: inline-block;
     margin: 0 40px;
-    font-size: 20px;
+    font-size: 35px;
 }
