--- a/mystyle.css
+++ b/mystyle.css
@@ -22,9 +22,10 @@ body {
 header {
     background: #333;
     color: #fff;
-    padding: 20px;
+    padding: 10px;
     text-align: center;
-    box-shadow: 8px 5px 15px 5px hsl(226, 58%, 16%);    
+    box-shadow: 8px 5px 15px 5px hsl(226, 58%, 16%);
+    font-size: 35px;    
 }
 
 .intro {   
@@ -111,7 +112,7 @@ header {
     width: 450px; 
     height: 400px;
     padding: 20px;
-    box-sizing: border-box;
+    box-sizing: content-box;
     background-color: #fff;
     box-shadow: 8px 5px 15px 5px hsl(226, 58%, 16%); 
     border-radius: 10px;   
